@@ -564,7 +564,7 @@ public:
 	void	QuestReadBook(const char* text, int8 type);
 	void	SendClientMoneyUpdate(int8 type,int32 amount);
 	void	SendMoneyUpdate();
-	bool	TakeMoneyFromPP(uint64 copper);
+	bool	TakeMoneyFromPP(uint64 copper, bool updateclient=false);
 	void	AddMoneyToPP(uint64 copper,bool updateclient);
 	void	AddMoneyToPP(uint32 copper, uint32 silver, uint32 gold,uint32 platinum,bool updateclient);
 	bool	HasMoney(uint64 copper);
